# VidAnomalyRetrieval

./: .gitignore  README.md  download_dropbox.py
DescriptionModule/: description_runner.py  download_ucf_hf.py  run_description.ipynb
RetrievalModule/: pyproject.toml
RetrievalModule/Qwen3-VL-Embedding/: pyproject.toml
RetrievalModule/Qwen3-VL-Embedding/data/evaluation/mmeb_v2/: download_data.sh
RetrievalModule/configs/: phase1.toml  phase2.toml  phase3.toml  rerank_phase1.toml  rerank_phase1_v5.toml
RetrievalModule/docs/: experiments.md  finetune_rerank.md  rerank_phase1_status.md  rerank_phase1_v2_status.md
RetrievalModule/scripts/: bench_rerank.py  evaluate.py  prepare_data.py  rerank_topk.py  run_rerank_zs_multimodal.sh  run_v5_full.sh  score_fusion.py  smoke_test.py  train.py  train_reranker.py
RetrievalModule/src/var/: __init__.py  cached_reranker.py  config.py  data.py  metrics.py  mining.py  model.py  trainer.py
configs/: config.toml  lora_video_base.toml  lora_warmup_phase_b.toml  phase1.toml  phase2.toml
data/: convert_to_json.py  extract_video_frames.py  get_video_info.ipynb  getframe.py  hivau_analysis.py  hivau_test_video_diff.json  hivau_train_video_diff.json
scripts/: EDA.ipynb  collator.py  dataset.py  embedder_adapter.py  embedding.py  encode_full_dataset.py  eval_checkpoints.sh  eval_retrieval.py  eval_zeroshot_on_the_fly.py  evaluate.py  lora_utils.py  prepare_data.py  run_phase_b_warmup.sh  run_zero_shot_eval.sh  smoke_test.py  test_forward_pass.py  test_lora_adapter.py  train.py  train_warmup_lora.py  video_info.py
(+25 files in other folders)
