[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "var"
version = "0.1.0"
description = "Video Anomaly Retrieval — LoRA fine-tuning on Qwen3-VL-Embedding"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
